[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["tobias hoelzer <tobias.hoelzer@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
pre-commit = "^2.15.0"
isort = "^5.10.1"
ipykernel = "^6.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
